# daleks

./: =4.2  LANGUAGE_OPTIONS.md  README.md  config.example.toml  daleks.service  dms-error.md  pyproject.toml
contrib/: __init__.py  client.py  flask_security_mail.py
daleks/: __init__.py  app.py  config.py  main.py  middleware.py  models.py  queue_manager.py  smtp_client.py
daleks/contrib/: django_backend.py  flask_log_handler.py  flask_security_mail.py
tests/: conftest.py  test_api.py  test_config.py  test_contrib_client.py  test_contrib_django.py  test_contrib_flask_log_handler.py  test_contrib_flask_security.py  test_middleware.py  test_models.py  test_queue.py  test_smtp.py
